myfirst inst.tf

# # Create a instaunce
# resource "aws_instance" "digu" {
#   ami = "ami-0123c9b6bfb7eb962="t2.micro""
#   instance_type 
#   key_name ="digambar"
#   tags = {
#     Name = "jarvis-server"
#     Enviorment ="staging"
#     Project ="xyz"
#   }
# }
